<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
         android:background="@drawable/logo"
          android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:background="@color/transparent"
            android:id="@+id/fragment_grid_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"

            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="launcher.MainLauncherActivity"/>

</FrameLayout>



