<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_launcher"
            android:icon="@drawable/ic_grid_on_black_24dp"
            android:title="@string/gridType" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/listType" />
        <item
            android:id="@+id/nav_desktop"
            android:icon="@drawable/ic_desktop_windows_black_24dp"
            android:title="@string/desktop" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/settings" />

    </group>

</menu>
